# tsck-sensory-substitution

./: .gitignore  CMakeLists.txt  README.md
src/: ArduinoSerial.cpp  ImagePlayer.cpp  ImagePlayer.hpp  audioIndicator.hpp  callbacks.hpp  getCallbacks.cpp  main.cpp  postCallbacks.cpp  smmServer.cpp  smmServer.hpp  thresholder.hpp  util.cpp  util.hpp
src/arduino/: arduino.ino
web_root/: index.html
